--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portifolio</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer localizado em João Pessoa">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
